INTYGFV-16749: Simplify print mapping configuration for the rest of the types.